--- a/sass/utilidades/_extend-mixin.scss
+++ b/sass/utilidades/_extend-mixin.scss
@@ -18,3 +18,19 @@
     justify-content: center;
     align-items: center;
 }
+
+//Keyframes
+@keyframes giro {
+    0%{
+       transform: translate(150px);
+       font-size: 20px;
+    }
+    50%{
+        transform: rotate(180deg) translate(350px);
+        font-size: 35px;
+    }
+    100%{
+        transform: rotate(360deg) translate(50px);
+        font-size: 25px;
+    }
+}
