--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import './utilidades/reseteo';
 @import './utilidades/extend-mixin';
 @import './utilidades/gradientes';
+@import './utilidades/sass-avanzado';
 
 @import './secciones/cajas';
