--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,68 @@
   background-image: radial-gradient(ellipse 250px 100px, lightgreen, #385d38);
 }
 
+h1 {
+  color: rgb(119, 20, 119);
+}
+
+.caja-1 {
+  font-size: 10px;
+}
+
+.caja-2 {
+  font-size: 20px;
+}
+
+.caja-3 {
+  font-size: 30px;
+}
+
+.caja-4 {
+  font-size: 40px;
+}
+
+.caja-5 {
+  font-size: 50px;
+}
+
+.blue {
+  background-image: linear-gradient(rgba(97, 97, 97, 0.8117647059), blue);
+  padding: 10px;
+  margin: 10px 0;
+}
+
+.yellow {
+  background-image: linear-gradient(rgba(97, 97, 97, 0.8117647059), yellow);
+  padding: 10px;
+  margin: 10px 0;
+}
+
+.orange {
+  background-image: linear-gradient(rgba(97, 97, 97, 0.8117647059), orange);
+  padding: 10px;
+  margin: 10px 0;
+}
+
+.btn-twitter {
+  background-color: #55acee;
+}
+
+.btn-facebook {
+  background-color: #3a5795;
+}
+
+.btn-gmail {
+  background-color: #c25e30;
+}
+
+li {
+  text-align: center;
+  padding: 20px;
+  font-size: 35px;
+  list-style: square;
+  color: #3a5795;
+}
+
 .main .caja-1 {
   background-color: rgba(33, 33, 33, 0.7411764706);
   border: 2px black solid;
